# syncyam-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md  build.rs
.github/ISSUE_TEMPLATE/: 💄-refactor-request.md  💿-ci-cd-request.md  📜-doc-request.md  🧩-chore-request.md  🧬-feature-request.md  🪲-bug-request.md
.github/workflows/: build-test-coverage.yml  pages.yml  rust.yml
scripts/: update-coverage-badge.sh
src/: constants.rs  lib.rs
src/clients/: client.rs  datatype_manager.rs  mod.rs
src/datatypes/: common.rs  counter.rs  datatype.rs  mod.rs  mutable.rs  rollback.rs  thread_safe.rs  transactional.rs
src/datatypes/crdts/: counter_crdt.rs  mod.rs
src/errors/: clients.rs  datatypes.rs  mod.rs
src/observability/: mod.rs  tracing_for_test.rs
src/operations/: body.rs  mod.rs  transaction.rs
src/types/: datatype.rs  mod.rs  operation_id.rs  uid.rs
src/utils/: defer_guard.rs  mod.rs  no_guard_mutex.rs  runtime.rs
