[package]
name = "syncyam"
version = "0.1.0"
edition = "2024"
# Except for the first time, the rust version will be kept at least one year behind the latest release and update it quarterly.
rust-version = "1.87.0"

[features]
default = []
tracing = [
    "dep:libc",
    "dep:once_cell",
    "dep:tracing-subscriber",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
    "dep:ctor",
]

[dependencies]
# optional
libc = { version = "^0.2.172", optional = true }
once_cell = { version = "^1.21.3", optional = true }
tracing-subscriber = { version = "^0.3.19", features = ["json", "fmt", "env-filter"], optional = true }
opentelemetry = { version = "^0.30.0", optional = true }
opentelemetry_sdk = { version = "^0.30.0", optional = true }
opentelemetry-otlp = { version = "^0.30.0", features = ["grpc-tonic"], optional = true }
tracing-opentelemetry = { version = "^0.31.0", optional = true }
ctor = { version = "^0.5.0", optional = true }

tracing = "^0.1.41"
nanoid = "^0.4.0"
tokio = { version = "^1.47.1", features = ["full"] }
parking_lot = "^0.12.4"
time = { version = "^0.3", features = ["formatting", "local-offset", "macros"] }
itoa = "^1.0.15"
derive_more = { version = "^2.0.1", features = ["display", "debug"] }
chrono = "0.4.41"
serde = { version = "^1.0.219", features = ["derive", "rc"] }
serde_json = "^1.0.143"
thiserror = "^2.0.16"

[dev-dependencies]
rstest = "^0.26.1"
awaitility = "^0.4.1"
